# srir_mandelbrot

./: .gitignore  CMakeLists.txt  Makefile  MakefileShippedSDL
ClientMandelbrot/: CMakeLists.txt  Main.cpp
ClientMandelbrot/ClientMandelbrotLib/: Application.cpp  Application.h  ApplicationState.h  CMakeLists.txt  DataRequestNamedPipe.h  DataResponseNamedPipe.h  Exception.cpp  Exception.h  Pixel.h
ServerMandelbrot/: CMakeLists.txt  main.cpp
client_mandelbrot/: CMakeLists.txt  Main.cpp
client_mandelbrot/src/: Application.cpp  Application.h  ApplicationState.h  CMakeLists.txt  DataRequestNamedPipe.h  Exception.h  Pixel.h  WindowToComplexPlaneMapper.cpp  WindowToComplexPlaneMapper.h
client_mandelbrot/tests/: CMakeLists.txt  tests.cpp
client_mandelbrot/tests_pipeside/: CMakeLists.txt  pipeside_tests.cpp
doc/: Conclusion.tex  Introduction.tex  raport.tex
mpi_mandelbrot/: CMakeLists.txt  LICENSE  colors.hpp  main.cpp  pi_server_demo.cpp
